Add project list test